--- a/site/index.html
+++ b/site/index.html
@@ -1,111 +1,108 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>CarRepair</title>
+  <title>Nobles Mot Centre Ltd</title>
   <meta charset="utf-8">
-  <meta name="format-detection" content="telepho<address class="contact-info">
-  <p>
-    28 Jackson Blvd Ste 1020 Chicago IL 60604-2340
-  </p>
-  <a class="bold heading-3" href="callto:01914692321">
-    <span class="text-icon-sm text-primary">
-      <span class="icon fa-phone"></span>
-      <span class="note">
-        24/7
+  <meta name="format-detection" content="telephone=no">
+</head>
+<body>
+  <address class="contact-info">
+    <p>
+      Nobles Mot Centre, Sunderland Road, NE10 0NR
+    </p>
+    <a class="bold heading-3" href="callto:01914692321">
+      <span class="text-icon-sm text-primary">
+        <span class="icon fa-phone"></span>
+        <span class="note">
+          24/7
+        </span>
       </span>
-    </span>
-    01914692321
-  </a>
-</address>
+      01914692321
+    </a>
+  </address>
 
-...
+  ...
 
-<footer class="well-xs">
-  <div class="container">
-    <h2 class="text-center">Contacts</h2>
-    <div class="row offset-2">
-      <div class="col-sm-6 col-sm-push-6">
-        <!-- RD Mailform -->
-        <form class='rd-mailform-2 booking-form' method="post" action="bat/rd-mailform.php">
-          <!-- RD Mailform Type -->
-          <input type="hidden" name="form-type" value="contact"/>
-          <!-- END RD Mailform Type -->
-          <fieldset>
-            <label data-add-placeholder>
-              <input type="text"
-                     name="name"
-                     placeholder="Name:"
-                     data-constraints="@NotEmpty @LettersOnly"/>
-            </label>
-            <label data-add-placeholder>
-              <input type="text"
-                     name="phone"
-                     placeholder="Phone:"
-                     data-constraints="@NotEmpty @NumbersOnly"/>
-            </label>
-            <label data-add-placeholder>
-              <input type="text"
-                     name="email"
-                     placeholder="E-mail:"
-                     data-constraints="@NotEmpty @Email"/>
-            </label>
-            <label data-add-placeholder>
-              <textarea name="message" placeholder="Message:"
-                        data-constraints="@NotEmpty"></textarea>
-            </label>
-            <div class="mfControls btn-group">
-              <button class="btn btn-lg btn-primary-variant-1" type="submit">Send</button>
-            </div>
+  <footer class="well-xs">
+    <div class="container">
+      <h2 class="text-center">Contacts</h2>
+      <div class="row offset-2">
+        <div class="col-sm-6 col-sm-push-6">
+          <!-- RD Mailform -->
+          <form class='rd-mailform-2 booking-form' method="post" action="bat/rd-mailform.php">
+            <!-- RD Mailform Type -->
+            <input type="hidden" name="form-type" value="contact"/>
+            <!-- END RD Mailform Type -->
+            <fieldset>
+              <label data-add-placeholder>
+                <input type="text"
+                       name="name"
+                       placeholder="Name:"
+                       data-constraints="@NotEmpty @LettersOnly"/>
+              </label>
+              <label data-add-placeholder>
+                <input type="text"
+                       name="phone"
+                       placeholder="Phone:"
+                       data-constraints="@NotEmpty @NumbersOnly"/>
+              </label>
+              <label data-add-placeholder>
+                <input type="text"
+                       name="email"
+                       placeholder="E-mail:"
+                       data-constraints="@NotEmpty @Email"/>
+              </label>
+              <label data-add-placeholder>
+                <textarea name="message" placeholder="Message:"
+                          data-constraints="@NotEmpty"></textarea>
+              </label>
+              <div class="mfControls btn-group">
+                <button class="btn btn-lg btn-primary-variant-1" type="submit">Send</button>
+              </div>
 
-            <div class="mfInfo"></div>
-          </fieldset>
-        </form>
-        <!-- END RD Mailform -->
-      </div>
-      <div class="col-sm-6 col-sm-pull-6">
-        <address>
-          <ul class="contact-info">
-            <li>
-              <span class="icon icon-xs icon-primary-variant-1 car-repire-icon-warehouse"></span>
-              <p>
-              <a href="#">
-                28 Jackson Blvd Ste 1020 Chicago IL 60604-2340
-              </a>
-              </p>
-            </li>
-            <li>
-              <span class="icon icon-xs icon-primary-variant-1 fa-phone"></span>
-              <p>
-                <a href="callto:01914692321">01914692321</a>
-              </p>
-            </li>
-            <li>
-              <span class="icon icon-xs icon-primary-variant-1 fa-clock-o"></span>
-              <p>
-                5 Days a week from 8:00 am to 5:00 pm
-              </p>
-            </li>
-            <li>
-              <span class="icon icon-xs small icon-primary-variant-1 fa-envelope"></span>
-              <p>
-                <a href="mailto:noblemotcentre@gmail.com">
-                  noblemotcentre@gmail.com
+              <div class="mfInfo"></div>
+            </fieldset>
+          </form>
+          <!-- END RD Mailform -->
+        </div>
+        <div class="col-sm-6 col-sm-pull-6">
+          <address>
+            <ul class="contact-info">
+              <li>
+                <span class="icon icon-xs icon-primary-variant-1 car-repire-icon-warehouse"></span>
+                <p>
+                <a href="#">
+                  Nobles Mot Centre, Sunderland Road, NE10 0NR
                 </a>
-              </p>
-            </li>
+                </p>
+              </li>
+              <li>
+                <span class="icon icon-xs icon-primary-variant-1 fa-phone"></span>
+                <p>
+                  <a href="callto:01914692321">01914692321</a>
+                </p>
+              </li>
+              <li>
+                <span class="icon icon-xs icon-primary-variant-1 fa-clock-o"></span>
+                <p>
+                  5 Days a week from 8:00 am to 5:00 pm
+                </p>
+              </li>
+              <li>
+                <span class="icon icon-xs small icon-primary-variant-1 fa-envelope"></span>
+                <p>
+                  <a href="mailto:noblemotcentre@gmail.com">
+                    noblemotcentre@gmail.com
+                  </a>
+                </p>
+              </li>
+            </ul>
+          </address>
+          <ul class="inline-list">
+            <li><a href="https://www.facebook.com/share/1AiYhRjfL7/?mibextid=LQQJ4d" class="icon icon-sm icon-primary-variant-2 fa-facebook"></a></li>
           </ul>
-        </address>
-        <ul class="inline-list">
-          <li><a href="https://www.facebook.com/share/1AiYhRjfL7/?mibextid=LQQJ4d" class="icon icon-sm icon-primary-variant-2 fa-facebook"></a></li>
-        </ul>
-        <p class="rights">
-          Noble Motor Centre © <span id="copyright-year"></span> All Rights Reserved
-          <!-- {%FOOTER_LINK} -->
-        </p>
-      </div>
-    </div>
-  </div>
-</footer>
+          <p class="rights">
+            Noble Motor Centre © <span id="copyright-year"></span> All Rights Reserved
             <!-- {%FOOTER_LINK} -->
           </p>
         </div>
